--- a/src/main/resources/KhuyenMai.fxml
+++ b/src/main/resources/KhuyenMai.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
@@ -14,9 +15,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="khuyenMaiTheoHoaDonPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="958.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GuiController.KhuyenMaiController">
+<Pane fx:id="khuyenMaiTheoHoaDonPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="710.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GuiController.KhuyenMaiController">
     <children>
-        <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-5.0" prefHeight="567.0" prefWidth="958.0">
+        <SplitPane dividerPositions="0.23755750731911332" layoutX="-1.0" layoutY="-5.0" prefHeight="720.0" prefWidth="1251.0">
             <items>
                 <AnchorPane fx:id="anchorPaneMenu" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #00A4EF;">
                     <children>
@@ -73,7 +74,7 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="334.0" prefWidth="725.0">
                     <children>
-                        <TableView fx:id="tableView" layoutY="199.0" prefHeight="365.0" prefWidth="742.0" AnchorPane.leftAnchor="0.0">
+                        <TableView fx:id="tableView" layoutY="199.0" prefHeight="520.0" prefWidth="950.0" AnchorPane.leftAnchor="0.0">
                             <columns>
                                 <TableColumn fx:id="maChuongTrinhKMColumn" prefWidth="139.3333282470703" text="Mã Chương Trình KM" />
                                 <TableColumn fx:id="phanTramKMColumn" minWidth="0.0" prefWidth="204.00003051757812" text="\% Khuyến Mãi" />
@@ -83,10 +84,10 @@
                         </TableView>
                         <TextField fx:id="textFieldTimKiem" layoutX="33.0" layoutY="29.0" promptText="Tìm kiếm..." styleClass="text-field-box" />
                         <Button layoutX="217.0" layoutY="29.0" mnemonicParsing="false" onAction="#timKiem" styleClass="btn" text="Tìm kiếm" />
-                        <Button layoutX="573.0" layoutY="151.0" mnemonicParsing="false" onAction="#openInforContainerHD" prefHeight="25.0" prefWidth="135.0" styleClass="btn" text="Thêm KMTT" />
-                        <Button layoutX="572.0" layoutY="120.0" mnemonicParsing="false" onAction="#openInforContainerKmTheoSanPham" prefHeight="25.0" prefWidth="135.0" text="Thêm KMSP" />
+                        <Button layoutX="750.0" layoutY="149.0" mnemonicParsing="false" onAction="#openInforContainerHD" prefHeight="25.0" prefWidth="135.0" styleClass="btn" text="Thêm KMTT" />
+                        <Button layoutX="750.0" layoutY="108.0" mnemonicParsing="false" onAction="#openInforContainerKmTheoSanPham" prefHeight="25.0" prefWidth="135.0" text="Thêm KMSP" />
                         <AnchorPane layoutX="36.0" layoutY="-90.0" maxHeight="1.7976931348623157E308" prefHeight="84.0" prefWidth="493.0" />
-                          <VBox fx:id="inforContainerKMTT" layoutX="5.0" layoutY="14.0" prefHeight="173.0" prefWidth="355.0" spacing="15.0" styleClass="inforForm">
+                          <VBox fx:id="inforContainerKMTT" layoutX="307.0" layoutY="187.0" prefHeight="173.0" prefWidth="355.0" spacing="15.0" styleClass="inforForm">
                               <children>
                                   <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                       <children>
@@ -94,6 +95,7 @@
                                           <TextField fx:id="txt_tongTien" prefHeight="26.0" prefWidth="174.0" promptText="Tổng Tiền" />
                                       </children>
                                   </HBox>
+                        <TextField fx:id="txt_TenCTKM" promptText="Tên chương trình khuyến mãi" />
                                   <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                       <children>
                                           <TextField fx:id="txt_phanTramKhuyenMai" prefHeight="26.0" prefWidth="210.0" promptText="\% Khuyến Mãi" />
@@ -116,7 +118,7 @@
                                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                               </padding>
                           </VBox>
-                          <Pane fx:id="inforContainerKMSP" layoutX="125.0" layoutY="362.0" prefHeight="200.0" prefWidth="394.0">
+                          <Pane fx:id="inforContainerKMSP" layoutX="273.0" layoutY="154.0" prefHeight="256.0" prefWidth="394.0">
                               <children>
                                   <HBox layoutX="28.0" layoutY="14.0" prefHeight="36.0" prefWidth="338.0" spacing="15.0">
                                       <children>
@@ -125,23 +127,28 @@
                                       </children>
                                   </HBox>
                                   <HBox layoutX="28.0" layoutY="50.0" prefHeight="36.0" prefWidth="271.0">
-                                      <children>
-                                          <TextField fx:id="txt_phanTramKhuyenMaiSP" prefHeight="25.0" prefWidth="213.0" promptText="\% Khuyến Mãi" />
-                                      </children>
+                           <children>
+                              <TextField fx:id="txt_TenCTKMSP" prefHeight="26.0" prefWidth="283.0" promptText="Tên chương trình khuyến mãi" />
+                           </children>
                                   </HBox>
                                   <HBox layoutX="28.0" layoutY="86.0" prefHeight="36.0" prefWidth="316.0" spacing="15.0">
                                       <children>
-                                          <DatePicker fx:id="datePickerNgayBatDauSP" promptText="Ngày Bắt Đầu" />
                                           <DatePicker fx:id="datePickerNgayKetThucSP" promptText="Ngày Kết Thúc" />
+                                          <DatePicker fx:id="datePickerNgayBatDauSP" promptText="Ngày Bắt Đầu" />
                                       </children>
                                   </HBox>
-                                  <HBox fx:id="inforFormButtonContainerSP" layoutX="106.0" layoutY="132.0" prefHeight="44.0" prefWidth="200.0" spacing="15.0">
-                                      <children>
-                                          <Button fx:id="btnAddKMSP" mnemonicParsing="false" onAction="#addKmTheoSanPham" prefHeight="25.0" prefWidth="79.0" text="Thêm" />
+                                  <HBox fx:id="inforFormButtonContainerSP" layoutX="88.0" layoutY="160.0" prefHeight="44.0" prefWidth="278.0" spacing="15.0">
+                           <children>
                                           <Button mnemonicParsing="false" onAction="#clossInforContainerKmTheoSanPham" prefHeight="25.0" prefWidth="82.0" text="Đóng" />
-                                      </children>
+                                          <Button fx:id="btnAddKMSP" mnemonicParsing="false" onAction="#addKmTheoSanPham" prefHeight="25.0" prefWidth="79.0" text="Thêm" />
+                           </children>
                                   </HBox>
+                                    <TextField fx:id="txt_phanTramKhuyenMaiSP" layoutX="28.0" layoutY="122.0" prefHeight="25.0" prefWidth="271.0" promptText="\% Khuyến Mãi" />
                               </children>
+                     <styleClass>
+                        <String fx:value="inforForm" />
+                        <String fx:value="form-container" />
+                     </styleClass>
                           </Pane>
                     </children>
                 </AnchorPane>
